2011-06-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Peephole typo.

2011-06-29 Philipp Klaus Krause <pkk@spth.de>

	* src/SDCCpeeph.c:
	  Character and string handling in C sucks.

2011-06-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvement.

2011-06-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCpeeph.c:
	  Improve accuracy of label reference counting.

2011-06-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCpeeph.c,
	  src/z80/peeph-z80.def:
	  Fixed #2970351, reenabling basic tail-call optimization.

2011-06-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/mappings.i,
	  src/z80/main.c,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Fix --fomit-frame-pointer for z80.

2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvement.

2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Peephole renumbering.

2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Remove unused (sdcc lib, regr. tests, contiki OS, libcv, my own programs) peepholes.

2011-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Fixed #3324913.

2011-06-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed broken use of large return values.

2011-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Restore RFE #3284870, which was lost during the optralloc merge.

2011-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Disallow use of h or l operand in addition when result in true symop.

2011-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc,
	  src/SDCCralloc.hpp,
	  src/SDCClabel.c:
	  Fixed bug #3325223.
